tests/baselines/reference/computedPropertyNames1_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames1_ES5.ts(2,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames1_ES5.ts(2,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames1_ES5.ts(3,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames1_ES5.ts(3,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames1_ES5.ts (4 errors) ====
    var v = {
        get [0 + 1]() { return 0 },
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        set [0 + 1](v: string) { } //No error
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }